src/highlighting/snapshots/zsh_patina__highlighting__syntax__tests__nice2__adjustment_equals.snap
---
source: src/highlighting/syntax.rs
expression: "cfg.highlight(\"nice2 --adjustment=5 date\")?"
---
nice2 --adjustment=5 date

0   5   `nice2`       CALLABLE `nice2`
5   8   ` --`         punctuation.definition.parameter
8   18  `adjustment`  variable.parameter.option
18  19  `=`           keyword.operator.assignment.option
19  20  `5`           meta.function-call.arguments
21  25  `date`        CALLABLE `date`
