src/highlighting/snapshots/zsh_patina__highlighting__syntax__tests__nice2__n_no_space.snap
---
source: src/highlighting/syntax.rs
expression: "cfg.highlight(\"nice2 -n5 date\")?"
---
nice2 -n5 date

0   5   `nice2`  CALLABLE `nice2`
5   7   ` -`     punctuation.definition.parameter
7   8   `n`      variable.parameter.option
8   9   `5`      meta.function-call.arguments
10  14  `date`   CALLABLE `date`
