src/highlighting/snapshots/zsh_patina__highlighting__syntax__tests__nice2__simple.snap
---
source: src/highlighting/syntax.rs
expression: "cfg.highlight(\"nice2 ls\")?"
---
nice2 ls

0  5  `nice2`  CALLABLE `nice2`
6  8  `ls`     CALLABLE `ls`
